--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-intersection-observer": "^9.5.3",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-type-animation": "^3.2.0",
     "web-vitals": "^3.5.0"
   },
   "devDependencies": {
